ever/templates/app-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  annotations:
    kompose.cmd: kompose convert
    kompose.version: 1.31.2 (a92241f79)
  creationTimestamp: null
  labels:
    io.kompose.service: app
  name: app
spec:
  replicas: 1
  selector:
    matchLabels:
      io.kompose.service: app
  strategy: {}
  template:
    metadata:
      annotations:
        kompose.cmd: kompose convert
        kompose.version: 1.31.2 (a92241f79)
      creationTimestamp: null
      labels:
        io.kompose.network/myevershop: "true"
        io.kompose.service: app
    spec:
      containers:
        - env:
            - name: DB_HOST
              value: database
            - name: DB_NAME
              value: postgres
            - name: DB_PASSWORD
              value: postgres
            - name: DB_PORT
              value: "5432"
            - name: DB_USER
              value: postgres
          image: evershop/evershop:latest
          name: app
          ports:
            - containerPort: 3000
              hostPort: 3000
              protocol: TCP
          resources: {}
      restartPolicy: Always
status: {}
