ever/templates/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: stretchshop-ingress
spec:
  ingressClassName: azure-application-gateway
  rules:
  - host: "evershop.local"
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service: 
            name: app
            port:
              number: 3000
